--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
-        "phpunit/phpunit": "^9.5.10"
+        "phpunit/phpunit": "^9.5.10",
+        "symfony/var-dumper": "^5.4"
     },
     "autoload": {
         "psr-4": {
